# zoomcamp25

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
docs/: README.md
notebooks/: homework_1.ipynb  test.ipynb
notebooks/homeworks/homework_1/sql/: question_3.sql
notebooks/homeworks/homework_2/: homework_2.ipynb
notebooks/homeworks/homework_2/sql/: question_3.sql  question_4.sql  question_5.sql
notebooks/homeworks/homework_3/: homework_3.ipynb
notebooks/homeworks/homework_3/sql/: bq_setup_and_homework.sql
notebooks/sql/: question_4.sql  question_5.sql
notebooks/sql/homework_1/: homework_1.ipynb  question_6.sql
notebooks/sql/homework_2/: homework_2.ipynb
src/app/data/etl/: load_yellow_taxi_data.py  request_api_with_dlt.py
src/app/data/etl/flows/: 04_gcp_kv.yaml
tests/: test_some_dummy_assert.py
