[tool.poetry]
name = "zoomcamp25"
version = "0.1.0"
description = "Project for DataTalksClub Data Engineering Zoomcamp 2025 edition"
authors = ["Ezequiel Lopez <ezequiel20139@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
pgcli = "^4.1.0"
psycopg = "^3.2.4"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.4"
kestra = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
